// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array fields array 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field-array"
  >
    <div
      className="field"
    >
      <div
        className="columns is-gapless"
      >
        <div
          className="column"
        />
      </div>
      <div
        className="columns is-gapless"
      >
        <div
          className="column"
        />
        <div
          className="column is-narrow"
        >
          <button
            className="button array-item-add is-info"
            disabled={false}
            onClick={[Function]}
            title="Add Item"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                {
                  "color": undefined,
                }
              }
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`array fields array icons 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field-array"
  >
    <div
      className="field"
    >
      <div
        className="columns is-gapless"
      >
        <div
          className="column"
        />
      </div>
      <div
        className="columns is-gapless"
      >
        <div
          className="column"
        >
          <div
            className="columns is-gapless"
          >
            <div
              className="column"
            >
              <div
                className="array-value"
              >
                <div
                  className="form-group field-string"
                >
                  <div
                    className="field"
                  >
                    <div
                      className="control"
                    >
                      <input
                        autoFocus={false}
                        className="input"
                        disabled={false}
                        id="root_0"
                        name="root_0"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder=""
                        readOnly={false}
                        required={true}
                        type="text"
                        value="a"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="column is-narrow"
            >
              <div
                className="field has-addons array-toolbar"
              >
                <p
                  className="control"
                >
                  <button
                    className="button array-item-up"
                    disabled={true}
                    onClick={[Function]}
                    title="Move up"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 448 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M34.9 289.5l-22.2-22.2c-9.4-9.4-9.4-24.6 0-33.9L207 39c9.4-9.4 24.6-9.4 33.9 0l194.3 194.3c9.4 9.4 9.4 24.6 0 33.9L413 289.4c-9.5 9.5-25 9.3-34.3-.4L264 168.6V456c0 13.3-10.7 24-24 24h-32c-13.3 0-24-10.7-24-24V168.6L69.2 289.1c-9.3 9.8-24.8 10-34.3.4z"
                      />
                    </svg>
                  </button>
                </p>
                <p
                  className="control"
                >
                  <button
                    className="button array-item-down"
                    disabled={false}
                    onClick={[Function]}
                    title="Move down"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 448 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
                      />
                    </svg>
                  </button>
                </p>
                <p
                  className="control"
                >
                  <button
                    className="button array-item-remove is-danger"
                    disabled={false}
                    onClick={[Function]}
                    title="Remove"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 448 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                      />
                    </svg>
                  </button>
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="columns is-gapless"
      >
        <div
          className="column"
        >
          <div
            className="columns is-gapless"
          >
            <div
              className="column"
            >
              <div
                className="array-value"
              >
                <div
                  className="form-group field-string"
                >
                  <div
                    className="field"
                  >
                    <div
                      className="control"
                    >
                      <input
                        autoFocus={false}
                        className="input"
                        disabled={false}
                        id="root_1"
                        name="root_1"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder=""
                        readOnly={false}
                        required={true}
                        type="text"
                        value="b"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="column is-narrow"
            >
              <div
                className="field has-addons array-toolbar"
              >
                <p
                  className="control"
                >
                  <button
                    className="button array-item-up"
                    disabled={false}
                    onClick={[Function]}
                    title="Move up"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 448 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M34.9 289.5l-22.2-22.2c-9.4-9.4-9.4-24.6 0-33.9L207 39c9.4-9.4 24.6-9.4 33.9 0l194.3 194.3c9.4 9.4 9.4 24.6 0 33.9L413 289.4c-9.5 9.5-25 9.3-34.3-.4L264 168.6V456c0 13.3-10.7 24-24 24h-32c-13.3 0-24-10.7-24-24V168.6L69.2 289.1c-9.3 9.8-24.8 10-34.3.4z"
                      />
                    </svg>
                  </button>
                </p>
                <p
                  className="control"
                >
                  <button
                    className="button array-item-down"
                    disabled={true}
                    onClick={[Function]}
                    title="Move down"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 448 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
                      />
                    </svg>
                  </button>
                </p>
                <p
                  className="control"
                >
                  <button
                    className="button array-item-remove is-danger"
                    disabled={false}
                    onClick={[Function]}
                    title="Remove"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 448 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                      />
                    </svg>
                  </button>
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="columns is-gapless"
      >
        <div
          className="column"
        />
        <div
          className="column is-narrow"
        >
          <button
            className="button array-item-add is-info"
            disabled={false}
            onClick={[Function]}
            title="Add Item"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                {
                  "color": undefined,
                }
              }
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`array fields checkboxes 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field-array"
  >
    <div
      className="field"
    >
      <div
        className="control"
      >
        <div
          className="select is-fullwidth is-multiple"
        >
          <select
            autoFocus={false}
            disabled={false}
            id="root"
            multiple={true}
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            value={[]}
          >
            <option
              disabled={false}
              value="a"
            >
              a
            </option>
            <option
              disabled={false}
              value="b"
            >
              b
            </option>
            <option
              disabled={false}
              value="c"
            >
              c
            </option>
          </select>
        </div>
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`array fields empty errors array 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field-object"
  >
    <div
      className="field"
    >
      <div
        className="columns is-gapless"
      >
        <div
          className="column"
        >
          <div
            className="form-group field-string"
          >
            <div
              className="field"
            >
              <label
                className="label"
                htmlFor="root_name"
              >
                name
              </label>
              <div
                className="control"
              >
                <input
                  autoFocus={false}
                  className="input"
                  disabled={false}
                  id="root_name"
                  name="root_name"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`array fields fixed array 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field-array"
  >
    <div
      className="field"
    >
      <div
        className="columns is-gapless"
      >
        <div
          className="column"
        />
      </div>
      <div
        className="columns is-gapless"
      >
        <div
          className="column"
        >
          <div
            className="columns is-gapless"
          >
            <div
              className="column"
            >
              <div
                className="array-value"
              >
                <div
                  className="form-group field-string"
                >
                  <div
                    className="field"
                  >
                    <div
                      className="control"
                    >
                      <input
                        autoFocus={false}
                        className="input"
                        disabled={false}
                        id="root_0"
                        name="root_0"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder=""
                        readOnly={false}
                        required={true}
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="columns is-gapless"
      >
        <div
          className="column"
        >
          <div
            className="columns is-gapless"
          >
            <div
              className="column"
            >
              <div
                className="array-value"
              >
                <div
                  className="form-group field-number"
                >
                  <div
                    className="field"
                  >
                    <div
                      className="control"
                    >
                      <input
                        autoFocus={false}
                        className="input"
                        disabled={false}
                        id="root_1"
                        name="root_1"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder=""
                        readOnly={false}
                        required={true}
                        step="any"
                        type="number"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`array fields no errors 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field-object"
  >
    <div
      className="field"
    >
      <div
        className="columns is-gapless"
      >
        <div
          className="column"
        >
          <div
            className="form-group field-string"
          >
            <div
              className="field"
            >
              <label
                className="label"
                htmlFor="root_name"
              >
                name
              </label>
              <div
                className="control"
              >
                <input
                  autoFocus={false}
                  className="input"
                  disabled={false}
                  id="root_name"
                  name="root_name"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;
